docs/v4.0.2/_sources/gallery/extras/LP11.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/LP11.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_LP11.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_LP11.py:


LP11 Mode Detector
==================

This example demonstrates the initialization and visualization of an LP11 Mode detector using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 7-47



.. image-sg:: /gallery/extras/images/sphx_glr_LP11_001.png
   :alt: LP11
   :srcset: /gallery/extras/images/sphx_glr_LP11_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    from PyMieSim.units import ureg

    from PyMieSim.single.scatterer import Sphere
    from PyMieSim.single.source import Gaussian
    from PyMieSim.polarization import PolarizationState
    from PyMieSim.single.detector import CoherentMode
    from PyMieSim.single import Setup


    polarization_state = PolarizationState(
        angle=0 * ureg.degree,
    )

    source = Gaussian(
        wavelength=1550 * ureg.nanometer,
        polarization=polarization_state,
        optical_power=1 * ureg.watt,
        numerical_aperture=0.3,
    )

    scatterer = Sphere(
        diameter=1800 * ureg.nanometer,
        medium=1.0,
        material=1.5,
    )

    detector = CoherentMode(
        mode_number="LP11",
        numerical_aperture=0.2,
        gamma_offset=0 * ureg.degree,
        phi_offset=30 * ureg.degree,
        rotation=0 * ureg.degree,
        polarization_filter=0 * ureg.degree,
        medium=1.0,
    )

    setup = Setup(scatterer=scatterer, source=source, detector=detector)

    setup.plot_system()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.202 seconds)


.. _sphx_glr_download_gallery_extras_LP11.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: LP11.ipynb <LP11.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: LP11.py <LP11.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: LP11.zip <LP11.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
